--- a/index.html
+++ b/index.html
@@ -34,10 +34,25 @@
 
       <div id="agrupa_lista">
         <ul id="itens_lista">
-          <li><a href="#" target="_blank">Inscrever-se no NLW</a></li>
-          <li><a href="#" target="_blank">Baixe meu e-book</a></li>
-          <li><a href="#" target="_blank">Ver meu portfólio</a></li>
-          <li><a href="#" target="_blank">Conheça o explorer</a></li>
+          <li>
+            <a href="https://guilhermec77.github.io/myHome/" target="_blank"
+              >Visite a minha página</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://api.whatsapp.com/send/?phone=5517988269521&text&type=phone_number&app_absent=0"
+              target="_blank"
+              >Fale comigo no Whatsapp <ion-icon name="logo-whatsapp"></ion-icon
+            ></a>
+          </li>
+          <li>
+            <a
+              href="mailto:guilherme.cesar@redemontecarlo.com.br"
+              target="_blank"
+              >Envie um e-mail
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -47,11 +62,6 @@
         ></a>
         <a href="https://www.instagram.com/guilhermec_cesar/" target="_blank"
           ><ion-icon name="logo-instagram"></ion-icon
-        ></a>
-        <a
-          href="https://api.whatsapp.com/send/?phone=5517988269521&text&type=phone_number&app_absent=0"
-          target="_blank"
-          ><ion-icon name="logo-whatsapp"></ion-icon
         ></a>
         <a
           href="https://www.linkedin.com/in/guilherme-c-155695181/"
@@ -73,6 +83,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="script.js" ></script>
+    <script src="script.js"></script>
   </body>
 </html>
