--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
         <ul id="itens_lista">
           <li>
             <a href="https://guilhermec77.github.io/myHome/" target="_blank"
-              >Visite a minha página</a
+              >Visit my webpage!</a
             >
           </li>
           <li>
             <a
               href="https://api.whatsapp.com/send/?phone=5517988269521&text&type=phone_number&app_absent=0"
               target="_blank"
-              >Fale comigo no Whatsapp <ion-icon name="logo-whatsapp"></ion-icon
+              >Let's talk in Whatsapp <ion-icon name="logo-whatsapp"></ion-icon
             ></a>
           </li>
           <li>
             <a
               href="mailto:guilherme.cesar@redemontecarlo.com.br"
               target="_blank"
-              >Envie um e-mail
+              >Send a e-mail!
             </a>
           </li>
         </ul>
@@ -71,7 +71,7 @@
       </div>
 
       <footer>
-        <p>Buscando ser melhor!</p>
+        <p>Trying to do better!</p>
       </footer>
     </div>
 
