alterações background e profile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="profile">
         <img
           id="fotoGui"
-          src="./assets/300379825_3403927629880067_4149787904894197279_n.jpg"
+          src="./assets/Guilherme Cruz.svg"
           alt="foto de perfil do Guilherme"
         />
         <p>@guilhermec_cesar</p>
